Thu, 24 Apr 2008 18:19:02 +0200 <thp@perli.net>
Maemo finger-friendly updates; minor UI changes

	* data/gpodder.glade: Ellipsize the feed update progressbar in the
	middle instead of the end (to show progress)
	* src/gpodder/gui.py: Add support for finger-friendly widget (buttons,
	scroll areas, popup menus, etc..); text is "Loading [...]" when
	loading feed cache and "Updating [...]" when updating feeds; on Maemo,
	don't set the tab title to the current episode title; hide the heading
	in gPodderEpisodeSelector on Maemo (to save screen space); add
	finger_friendly_widgets class attribute to several gPodder windows;
	make the tabs in the main window a bit taller, but remove the border
	around the main window to gain some space on the screen

Thu, 24 Apr 2008 15:48:58 +0200 <thp@perli.net>
Updated Swedish translation by Anders Kvist

	* data/po/sv.po: Updated Swedish translation by Anders Kvist

Wed, 23 Apr 2008 22:31:42 +0200 <thp@perli.net>
Merge patch from Junio C Hamano to fix problems with zero-length in feeds

	* src/gpodder/gui.py: Update list of contributors/patch writers
	* src/gpodder/services.py: Patch from Junio C Hamano to fix a problem
	when a feed has zero length, which would otherwise result in a
	divide-by-zero error

Tue, 22 Apr 2008 21:57:31 +0200 <thp@perli.net>
Typo from previous commit

	* src/gpodder/libpodcasts.py: Fix typo

Tue, 22 Apr 2008 21:54:01 +0200 <thp@perli.net>
Diverse changes, code clean-ups and other small annoyances

	* src/gpodder/config.py: Make sure we can load a default set of
	configuration options, even if we are in CLI mode
	* src/gpodder/download.py: Don't display a traceback when logging a
	cancelled download
	* src/gpodder/gui.py: Add Doug Hellmann to contributors/coders list in
	the about dialog (Doug Hellmann has done the feed cache code); do not
	center the gPodderEpisode dialog on the treeAvailable widget (this
	looks ugly ;)
	* src/gpodder/libpodcasts.py: Clean up import statements; Make sure we