@@ -1,3 +1,13 @@
+Thu, 24 Apr 2008 19:40:55 +0200 <thp@perli.net>
+Maemo-specific dialogs and UI improvements
+
+	* data/gpodder.glade: Maemo-specific "Add Podcast" dialog and
+	Maemo-specific, stripped-down "Preferences" dialog added
+	* src/gpodder/gui.py: Hide channel add UI from main window; make label
+	for update button even shorter; hide cover and pill cells in the
+	channel list if it gets too small; Maemo-specific dialogs for both
+	adding channels and editing preferences
+
 Thu, 24 Apr 2008 18:19:02 +0200 <thp@perli.net>
 Maemo finger-friendly updates; minor UI changes
 
